--- a/public/assignment/views/widgets/templates/widget-edit.view.client.html
+++ b/public/assignment/views/widgets/templates/widget-edit.view.client.html
@@ -1,4 +1,4 @@
-<div ng-switch="model.widget.widgetType">
+<div ng-switch="model.widget.type">
     <div ng-switch-when="HEADING">
         <ng-include src="'views/widgets/templates/widget-heading.view.client.html'"></ng-include>
     </div>
