Assignment 5 seventh commit

--- a/public/assignment/views/widgets/templates/widget-choose.view.client.html
+++ b/public/assignment/views/widgets/templates/widget-choose.view.client.html
@@ -38,7 +38,7 @@
 
             <li class="list-group-item">
                 <div class="row">
-                    <a>
+                    <a ng-click="model.createWidget('HTML')">
                         <div class="col-xs-9">HTML</div>
                         <div class="col-xs-3">
                             <span class="pull-right glyphicon glyphicon-pencil"></span>
@@ -49,7 +49,7 @@
 
             <li class="list-group-item">
                 <div class="row">
-                    <a>
+                    <a ng-click="model.createWidget('TEXT')">
                         <div class="col-xs-9">Text Input</div>
                         <div class="col-xs-3">
                             <span class="pull-right glyphicon glyphicon-pencil"></span>
