--- a/public/assignment/views/widgets/templates/widget-edit.view.client.html
+++ b/public/assignment/views/widgets/templates/widget-edit.view.client.html
@@ -8,4 +8,10 @@
     <div ng-switch-when="YOUTUBE">
         <ng-include src="'views/widgets/templates/widget-youtube.view.client.html'"></ng-include>
     </div>
+    <div ng-switch-when="HTML">
+        <ng-include src="'views/widgets/templates/widget-html.view.client.html'"></ng-include>
+    </div>
+    <div ng-switch-when="TEXT">
+        <ng-include src="'views/widgets/templates/widget-text.view.client.html'"></ng-include>
+    </div>
 </div>
