--- a/public/assignment/views/widgets/templates/widget-list.view.client.html
+++ b/public/assignment/views/widgets/templates/widget-list.view.client.html
@@ -106,7 +106,34 @@
                             <a>
                                 <span class="glyphicon glyphicon-menu-hamburger pull-right piy-justify-glyphi handle-sorting"></span>
                             </a>
+                            <a href="#!/user/{{model.userId}}/website/{{model.wid}}/page/{{model.pid}}/widget/{{widget._id}}">
+                                <span class="glyphicon glyphicon-cog pull-right piy-cog-glyphi"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div ng-switch-when="TEXT">
+                    <div class="row">
+                        <div class="col-xs-12 piy-margin-bottom">
+                            <div ng-if="widget.formatted"
+                                 text-angular
+                                 ta-toolbar="[['bold','italics','underline','strikeThrough'],
+                                             ['ul','ol'],['justifyLeft','justifyCenter','justifyRight','justifyFull'],
+                                             ['indent','outdent']]">
+                            </div>
+                            <input ng-if="!widget.formatted && (!widget.rows || widget.rows===1)"
+                                   placeholder="{{widget.textInput.placeholder}}"
+                                   class="form-control"/>
+                            <textarea ng-if="!widget.formatted && (widget.rows > 1)"
+                                      rows="{{widget.rows}}"
+                                      placeholder="{{widget.placeholder}}"
+                                      class="form-control">{{widget.text}}</textarea>
+                        </div>
+                        <div class="col-xs-12 piy-glyphicon-split">
                             <a>
+                                <span class="glyphicon glyphicon-menu-hamburger pull-right piy-justify-glyphi handle-sorting"></span>
+                            </a>
+                            <a href="#!/user/{{model.userId}}/website/{{model.wid}}/page/{{model.pid}}/widget/{{widget._id}}">
                                 <span class="glyphicon glyphicon-cog pull-right piy-cog-glyphi"></span>
                             </a>
                         </div>
