--- a/public/Foursquare/views/templates/search.view.client.html
+++ b/public/Foursquare/views/templates/search.view.client.html
@@ -12,7 +12,7 @@
             <div ng-show="model.result"><h2>Results:</h2></div>
             <ul class="list-group">
                 <li class="list-group-item" ng-repeat="val in model.result.response.venues">
-                    <a href="#!/venue/{{val.id}}">{{val.name}}</a> at {{val.location.formattedAddress}}
+                    <a href="#!/venue/{{val.id}}">{{val.name}}</a>
                 </li>
             </ul>
         </div>
