--- a/public/project/views/follow/templates/followers.view.client.html
+++ b/public/project/views/follow/templates/followers.view.client.html
@@ -10,12 +10,12 @@
                 <a class="smoothScroll navbar-brand">TravelMate</a>
             </div>
             <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav nav-pills navbar-right">
                     <li><a ng-href="#!/profile" class="smoothScroll fa fa-user"> Profile</a></li>
                     <li><a ng-href="#!/wishList" class="smoothScroll fa fa-list"> Wish List</a></li>
                     <li><a href="" class="smoothScroll fa fa-sticky-note"> Reviews</a></li>
                     <li><a ng-href="#!/following" ng-hide="model.userRole === 'Host'" class="smoothScroll fa fa-users"> Following</a></li>
-                    <li><a ng-href="#!/place" class="smoothScroll fa fa-search"> Search Place</a></li>
+                    <li><a ng-click="model.place()" class="smoothScroll fa fa-search"> Search Place</a></li>
                 </ul>
             </div>
         </div>
@@ -23,16 +23,10 @@
 
     <div class="container-fluid pro-split-view">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2">
                 <ul class="list-group">
                     <li class="list-group-item" ng-repeat="val in model.followers">
-                        <a href="">{{val.firstName | uppercase}} {{val.lastName | uppercase}}</a>
-                        <!--<button ng-hide="model.alreadyFollowing(val._id)" ng-click="model.follow(val)"-->
-                                <!--class="smoothScroll fa fa-plus pull-right"> Follow-->
-                        <!--</button>-->
-                        <!--<button ng-show="model.alreadyFollowing(val._id)" ng-click="model.unfollow(val)"-->
-                                <!--class="smoothScroll fa fa-plus pull-right"> Unfollow-->
-                        <!--</button>-->
+                        <a ng-href="#!/follower/{{val._id}}">{{val.firstName | uppercase}} {{val.lastName | uppercase}}</a>
                     </li>
                 </ul>
             </div>
