--- a/public/project/views/follow/templates/following.view.client.html
+++ b/public/project/views/follow/templates/following.view.client.html
@@ -10,12 +10,12 @@
                 <a class="smoothScroll navbar-brand">TravelMate</a>
             </div>
             <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav nav-pills navbar-right">
                     <li><a ng-href="#!/profile" class="smoothScroll fa fa-user"> Profile</a></li>
                     <li><a ng-href="#!/wishList" class="smoothScroll fa fa-list"> Wish List</a></li>
                     <li><a href="" class="smoothScroll fa fa-sticky-note"> Reviews</a></li>
                     <li><a ng-href="#!/followers" ng-hide="model.userRole === 'Traveller'" class="smoothScroll fa fa-users"> Followers</a></li>
-                    <li><a ng-href="#!/place" class="smoothScroll fa fa-search"> Search Place</a></li>
+                    <li><a ng-click="model.place()" class="smoothScroll fa fa-search"> Search Place</a></li>
                 </ul>
             </div>
         </div>
@@ -23,10 +23,10 @@
 
     <div class="container-fluid pro-split-view">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2">
                 <ul class="list-group">
                     <li class="list-group-item" ng-repeat="val in model.following">
-                        <a href="">{{val.firstName | uppercase}} {{val.lastName | uppercase}}</a>
+                        <a ng-href="#!/host/{{val._id}}">{{val.firstName | uppercase}} {{val.lastName | uppercase}}</a>
                         <button ng-click="model.unfollow(val)"
                                 class="smoothScroll fa fa-plus pull-right"> Unfollow
                         </button>
@@ -36,7 +36,7 @@
         </div>
         <hr>
         <div class="row form-group">
-            <div class="col-xs-12 col-md-10 col-md-offset-1">
+            <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2">
                 <label for="search">Search Hosts by place name</label>
                 <div class="input-group">
                     <input ng-model="model.placeName"
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2">
                 <div ng-show="model.result">
                     <label>
                         Hosts:
@@ -61,7 +61,7 @@
                 </div>
                 <ul class="list-group">
                     <li class="list-group-item" ng-repeat="val in model.result.hosts">
-                        <a href="#">{{val.firstName | uppercase}} {{val.lastName | uppercase}}</a>
+                        <a ng-href="#!/host/{{val._id}}">{{val.firstName | uppercase}} {{val.lastName | uppercase}}</a>
                         <button ng-click="model.getReview(val._id)"
                                 class="smoothScroll fa fa-sticky-note pull-right"> Reviews
                         </button>
