--- a/public/project/views/place/templates/place-search.view.client.html
+++ b/public/project/views/place/templates/place-search.view.client.html
@@ -10,11 +10,11 @@
                 <a class="smoothScroll navbar-brand">TravelMate</a>
             </div>
             <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav nav-pills navbar-right">
                     <li><a ng-href="#!/profile" class="smoothScroll fa fa-user"> Profile</a></li>
                     <li><a ng-href="#!/wishList" class="smoothScroll fa fa-list"> Wish List</a></li>
                     <li><a href="" class="smoothScroll fa fa-sticky-note"> Reviews</a></li>
-                    <li><a ng-href="#!/following" ng-hide="model.userRole === 'Host'" class="smoothScroll fa fa-users"> Following</a></li>
+                    <li><a ng-click="model.following()" ng-hide="model.userRole === 'Host'" class="smoothScroll fa fa-users"> Following</a></li>
                     <li><a ng-href="#!/followers" ng-hide="model.userRole === 'Traveller'" class="smoothScroll fa fa-users"> Followers</a></li>
                 </ul>
             </div>
@@ -23,7 +23,7 @@
 
     <div class="container-fluid pro-split-view">
         <div class="row form-group">
-            <div class="col-xs-12 col-md-10 col-md-offset-1">
+            <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2">
                 <h2>Enter place name</h2>
                 <div class="input-group">
                     <input ng-model="model.placeName"
@@ -37,11 +37,7 @@
                         </a>
                     </span>
                 </div>
-            </div>
-        </div>
-        <hr>
-        <div class="row">
-            <div class="col-xs-12">
+                <hr>
                 <div ng-show="model.result">
                     <div>
                         <label>
@@ -60,7 +56,7 @@
                 </div>
                 <ul class="list-group">
                     <li class="list-group-item" ng-repeat="val in model.result.response.venues">
-                        <a href="#!/venue/{{val.id}}">{{val.name}}</a> ({{val.categories[0].name}})
+                        <a href="#!/place/{{val.id}}">{{val.name}}</a> ({{val.categories[0].name}})
                     </li>
                 </ul>
             </div>
