--- a/public/project/views/user/templates/login.view.client.html
+++ b/public/project/views/user/templates/login.view.client.html
@@ -1,61 +1,69 @@
 <div class="pro pro-body pro-login">
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
-            <!--<div class="navbar-text pull-left">-->
-                <!--<a href="#" class="pro-glyphicon">-->
-                    <!--<span class="glyphicon glyphicon-chevron-left"></span>-->
-                <!--</a>-->
-            <!--</div>-->
             <div class="navbar-header">
-                <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon icon-bar"></span>
-                    <span class="icon icon-bar"></span>
-                    <span class="icon icon-bar"></span>
-                </button>
                 <a class="smoothScroll navbar-brand">TravelMate</a>
             </div>
-            <!--<div class="collapse navbar-collapse">-->
-                <!--<ul class="nav navbar-nav navbar-right">-->
-                    <!--<li><a ng-href="#!/login" class="smoothScroll glyphicon glyphicon-log-in"> Login</a></li>-->
-                    <!--<li><a ng-href="#!/register" class="smoothScroll glyphicon glyphicon-registration-mark"> Register</a></li>-->
-                <!--</ul>-->
-            <!--</div>-->
         </div>
     </nav>
 
     <div class="container-fluid pro-split-view">
-        <div>
-            <h2>Login</h2>
+        <div class="row">
+            <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2">
+                <h2>Login</h2>
 
-            <div ng-show="model.errorMessage" class="alert alert-danger">
-                {{model.errorMessage}}
+                <div ng-show="model.errorMessage" class="alert alert-danger">
+                    {{model.errorMessage}}
+                </div>
+
+                <input name="username"
+                       ng-model="model.user.username"
+                       type="text"
+                       class="form-control"
+                       placeholder="Username"
+                       id="username"/>
+
+                <input name="password"
+                       ng-model="model.user.password"
+                       type="password"
+                       class="form-control"
+                       placeholder="Password"
+                       id="password"/>
+
+                <a class="btn btn-default btn-primary btn-block"
+                   ng-click="model.login(model.user)"
+                   role="button">Login</a>
+
+                <a class="btn btn-default btn-success btn-block"
+                   ng-href="#!/register"
+                   role="button">Register</a>
+
+                <a class="btn btn-default btn-danger btn-block"
+                   ng-click="model.back()"
+                   role="button">Cancel</a>
+
+                <h3 class="text-center">OR</h3>
+
+                <p>NOTE: If signing up for first time using Facebook/Google then please enter the below field:</p>
+                <label for="role">User Role</label>
+                <select name="role"
+                        ng-model="model.user.role"
+                        class="form-control form-group"
+                        id="role">
+                    <option value="Traveller">Traveller</option>
+                    <option value="Host">Host</option>
+                </select>
+
+                <a ng-href="/auth/facebook" class="btn btn-primary btn-block">
+                    <span class="fa fa-facebook"></span>
+                     Login via Facebook
+                </a>
+
+                <a ng-href="/auth/google" class="btn btn-danger btn-block">
+                    <span class="fa fa-google-plus"></span>
+                     Login via Google
+                </a>
             </div>
-
-            <input name="username"
-                   ng-model="model.user.username"
-                   type="text"
-                   class="form-control"
-                   placeholder="Username"
-                   id="username"/>
-
-            <input name="password"
-                   ng-model="model.user.password"
-                   type="password"
-                   class="form-control"
-                   placeholder="Password"
-                   id="password"/>
-
-            <a class="btn btn-default btn-primary btn-block"
-               ng-click="model.login(model.user)"
-               role="button">Login</a>
-
-            <a class="btn btn-default btn-success btn-block"
-               ng-href="#!/register"
-               role="button">Register</a>
-
-            <a class="btn btn-default btn-danger btn-block"
-               ng-href="#"
-               role="button">Cancel</a>
         </div>
     </div>
 
