--- a/public/project/views/follow/templates/follower-details.view.client.html
+++ b/public/project/views/follow/templates/follower-details.view.client.html
@@ -15,11 +15,11 @@
     <div class="container-fluid pro-split-view">
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2">
-                <h1>Host Details:</h1>
-                <h3>Host name: {{model.follower.firstName}} {{model.follower.lastName}}</h3>
+                <h1>Details:</h1>
+                <h3>Name: {{model.follower.firstName}} {{model.follower.lastName}}</h3>
                 <h4>Email Id: {{model.follower.email}}</h4>
                 <h4>Contact Info: {{model.follower.phone}}</h4>
-                <h4>Hosting cities:</h4>
+                <h4>Favorites:</h4>
                 <ul class="list-group">
                     <li class="list-group-item" ng-repeat="val in model.follower.wishlist">
                         {{val.placeName | uppercase}}
