--- a/public/project/views/follow/templates/following.view.client.html
+++ b/public/project/views/follow/templates/following.view.client.html
@@ -13,7 +13,7 @@
                 <ul class="nav nav-pills navbar-right">
                     <li><a ng-href="#!/profile" class="smoothScroll fa fa-user"> Profile</a></li>
                     <li><a ng-href="#!/wishList" class="smoothScroll fa fa-list"> Wish List</a></li>
-                    <li><a href="" class="smoothScroll fa fa-sticky-note"> Reviews</a></li>
+                    <li><a ng-href="#!/review" class="smoothScroll fa fa-sticky-note"> Reviews</a></li>
                     <li><a ng-href="#!/followers" ng-hide="model.userRole === 'Traveller'" class="smoothScroll fa fa-users"> Followers</a></li>
                     <li><a ng-click="model.place()" class="smoothScroll fa fa-search"> Search Place</a></li>
                 </ul>
