--- a/public/project/views/follow/templates/followers.view.client.html
+++ b/public/project/views/follow/templates/followers.view.client.html
@@ -12,8 +12,8 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav nav-pills navbar-right">
                     <li><a ng-href="#!/profile" class="smoothScroll fa fa-user"> Profile</a></li>
-                    <li><a ng-href="#!/wishList" class="smoothScroll fa fa-list"> Wish List</a></li>
-                    <li><a href="" class="smoothScroll fa fa-sticky-note"> Reviews</a></li>
+                    <li><a ng-href="#!/wishList" class="smoothScroll fa fa-list"> Hosting Cities</a></li>
+                    <li><a ng-href="#!/review" class="smoothScroll fa fa-sticky-note"> Reviews</a></li>
                     <li><a ng-href="#!/following" ng-hide="model.userRole === 'Host'" class="smoothScroll fa fa-users"> Following</a></li>
                     <li><a ng-click="model.place()" class="smoothScroll fa fa-search"> Search Place</a></li>
                 </ul>
