--- a/public/project/views/home/templates/details.view.client.html
+++ b/public/project/views/home/templates/details.view.client.html
@@ -27,14 +27,14 @@
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2">
                 <h2>Details:</h2>
-                <h3>Venue name:</h3>
-                {{model.venue.name}}
+                <h4>Venue name:</h4>
+                <p>{{model.venue.name}}</p>
                 <h4>Location:</h4>
-                {{model.venue.location.formattedAddress}}
+                <p>{{model.venue.location.formattedAddress}}</p>
                 <h4>Timings:</h4>
-                {{model.venue.hours.status}}
+                <p>{{model.venue.hours.status}}</p>
                 <h4>Rating:</h4>
-                {{model.venue.rating}}
+                <p>{{model.venue.rating}}</p>
             </div>
         </div>
     </div>
