--- a/public/project/views/home/templates/home.view.client.html
+++ b/public/project/views/home/templates/home.view.client.html
@@ -39,7 +39,7 @@
         <hr>
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2">
-                <div ng-show="model.result"><h2>Results:</h2></div>
+                <div ng-show="model.result"><h2>Places to visit at {{model.result.response.geocode.feature.displayName}}:</h2></div>
                 <ul class="list-group">
                     <li class="list-group-item" ng-repeat="val in model.result.response.venues">
                         <a href="#!/venue/{{val.id}}">{{val.name}}</a>
