--- a/public/project/views/place/templates/place-search.view.client.html
+++ b/public/project/views/place/templates/place-search.view.client.html
@@ -12,8 +12,9 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav nav-pills navbar-right">
                     <li><a ng-href="#!/profile" class="smoothScroll fa fa-user"> Profile</a></li>
-                    <li><a ng-href="#!/wishList" class="smoothScroll fa fa-list"> Wish List</a></li>
-                    <li><a href="" class="smoothScroll fa fa-sticky-note"> Reviews</a></li>
+                    <li><a ng-href="#!/wishList" ng-hide="model.userRole === 'Host'" class="smoothScroll fa fa-list"> Wish List</a></li>
+                    <li><a ng-href="#!/wishList" ng-hide="model.userRole === 'Traveller'" class="smoothScroll fa fa-list"> Hosting Cities</a></li>
+                    <li><a ng-href="#!/review" class="smoothScroll fa fa-sticky-note"> Reviews</a></li>
                     <li><a ng-click="model.following()" ng-hide="model.userRole === 'Host'" class="smoothScroll fa fa-users"> Following</a></li>
                     <li><a ng-href="#!/followers" ng-hide="model.userRole === 'Traveller'" class="smoothScroll fa fa-users"> Followers</a></li>
                 </ul>
@@ -41,17 +42,24 @@
                 <div ng-show="model.result">
                     <div>
                         <label>
-                            Places at {{model.result.response.geocode.feature.displayName}}:
+                            Places to visit at {{model.result.response.geocode.feature.displayName}}:
                         </label>
-                        <button ng-click="model.getReview(model.placeName | lowercase)"
-                                class="smoothScroll fa fa-sticky-note fa-pull-right"> Reviews
-                        </button>
-                        <button ng-hide="model.alreadyInList" ng-click="model.addToList(model.placeName | lowercase)"
-                           class="smoothScroll fa fa-plus fa-pull-right"> Add to Wish List
-                        </button>
-                        <button ng-show="model.alreadyInList" ng-click="model.removeFromList(model.placeName | lowercase)"
-                                class="smoothScroll fa fa-plus fa-pull-right"> Remove from Wish List
-                        </button>
+                        <a ng-hide="model.userRole === 'Host'">
+                            <button ng-hide="model.alreadyInList" ng-click="model.addToList(model.placeName | lowercase)"
+                               class="smoothScroll fa fa-plus fa-pull-right"> Add to Wish List
+                            </button>
+                            <button ng-show="model.alreadyInList" ng-click="model.removeFromList(model.placeName | lowercase)"
+                                    class="smoothScroll fa fa-plus fa-pull-right"> Remove from Wish List
+                            </button>
+                        </a>
+                        <a ng-hide="model.userRole === 'Traveller'">
+                            <button ng-hide="model.alreadyInList" ng-click="model.addToList(model.placeName | lowercase)"
+                                    class="smoothScroll fa fa-plus fa-pull-right"> Add to Hosting Cities
+                            </button>
+                            <button ng-show="model.alreadyInList" ng-click="model.removeFromList(model.placeName | lowercase)"
+                                    class="smoothScroll fa fa-plus fa-pull-right"> Remove from Hosting Cities
+                            </button>
+                        </a>
                     </div>
                 </div>
                 <ul class="list-group">
