--- a/public/project/views/user/templates/profile.view.client.html
+++ b/public/project/views/user/templates/profile.view.client.html
@@ -11,11 +11,12 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav nav-pills navbar-right">
-                    <li><a ng-href="#!/wishList" class="smoothScroll fa fa-list"> Wish List</a></li>
-                    <li><a href="" class="smoothScroll fa fa-sticky-note"> Reviews</a></li>
-                    <li><a ng-click="model.following()" ng-hide="model.userRole === 'Host'" class="smoothScroll fa fa-users"> Following</a></li>
-                    <li><a ng-href="#!/followers" ng-hide="model.userRole === 'Traveller'" class="smoothScroll fa fa-users"> Followers</a></li>
-                    <li><a ng-click="model.place()" class="smoothScroll fa fa-search"> Search Place</a></li>
+                    <li><a ng-click="model.wishList(model.user)" ng-hide="model.userRole === 'Host'" class="smoothScroll fa fa-list"> Wish List</a></li>
+                    <li><a ng-click="model.wishList(model.user)" ng-hide="model.userRole === 'Traveller'" class="smoothScroll fa fa-list"> Hosting Cities</a></li>
+                    <li><a ng-click="model.review(model.user)" class="smoothScroll fa fa-sticky-note"> Reviews</a></li>
+                    <li><a ng-click="model.following(model.user)" ng-hide="model.userRole === 'Host'" class="smoothScroll fa fa-users"> Following</a></li>
+                    <li><a ng-click="model.followers(model.user)" ng-hide="model.userRole === 'Traveller'" class="smoothScroll fa fa-users"> Followers</a></li>
+                    <li><a ng-click="model.place(model.user)" class="smoothScroll fa fa-search"> Search Place</a></li>
                 </ul>
             </div>
         </div>
@@ -24,6 +25,11 @@
     <div class="container-fluid pro-split-view">
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2">
+
+                <div ng-show="model.errorMessage" class="alert alert-danger">
+                    {{model.errorMessage}}
+                </div>
+
                 <label for="firstname">First Name</label>
                 <input name="firstname"
                        ng-model="model.user.firstName"
