--- a/public/project/views/home/templates/home.view.client.html
+++ b/public/project/views/home/templates/home.view.client.html
@@ -11,8 +11,8 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav nav-pills navbar-right">
-                    <li><a ng-href="#!/login" class="smoothScroll"> Login</a></li>
-                    <li><a ng-href="#!/register" class="smoothScroll"> Register</a></li>
+                    <li><a ng-href="#!/login" class="smoothScroll fa fa-sign-in"> Login</a></li>
+                    <li><a ng-href="#!/register" class="smoothScroll fa fa-user"> Register</a></li>
                 </ul>
             </div>
         </div>
