--- a/public/project/views/place/templates/place-review.view.client.html
+++ b/public/project/views/place/templates/place-review.view.client.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-text pull-left">
-                <a ng-href="#!/place" class="pro-glyphicon">
+                <a ng-href="#!/wishList" class="pro-glyphicon">
                     <span class="glyphicon glyphicon-chevron-left"></span>
                 </a>
             </div>
